fix: (style) text-align: justify

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,3 @@
-:root{
-  text-autospace: normal;
-  text-align: justify;
-}
-
 @font-face {
   font-family: 'SweiHalfMoonCJKtc-Medium';
   src: url(/fonts/SweiHalfMoonCJKtc-Medium.ttf);
